--- a/gui/frontend/ui/main_window.ui
+++ b/gui/frontend/ui/main_window.ui
@@ -92,7 +92,7 @@
       </widget>
       <widget class="QWidget" name="tabTemperature">
        <attribute name="title">
-        <string>Temp</string>
+        <string>Temperature</string>
        </attribute>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
@@ -264,7 +264,7 @@
        <item>
         <widget class="QLabel" name="labelSupplyV">
          <property name="text">
-          <string>Supply Voltage</string>
+          <string>Supply Voltage:</string>
          </property>
         </widget>
        </item>
@@ -281,14 +281,32 @@
            <widget class="QLCDNumber" name="lcdNumberBattV">
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>70</width>
               <height>23</height>
              </size>
+            </property>
+            <property name="styleSheet">
+             <string notr="true">color:rgb(255, 7, 7)</string>
+            </property>
+            <property name="smallDecimalPoint">
+             <bool>true</bool>
+            </property>
+            <property name="numDigits">
+             <number>5</number>
+            </property>
+            <property name="segmentStyle">
+             <enum>QLCDNumber::Flat</enum>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="QLabel" name="labelV">
+            <property name="maximumSize">
+             <size>
+              <width>10</width>
+              <height>16777215</height>
+             </size>
+            </property>
             <property name="text">
              <string>V</string>
             </property>
