User controlled filtering

--- a/gui/frontend/ui/main_window.ui
+++ b/gui/frontend/ui/main_window.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>738</width>
-    <height>572</height>
+    <height>665</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <property name="minimumSize">
        <size>
         <width>300</width>
-        <height>520</height>
+        <height>600</height>
        </size>
       </property>
       <property name="font">
@@ -251,13 +251,13 @@
       <property name="minimumSize">
        <size>
         <width>150</width>
-        <height>520</height>
+        <height>600</height>
        </size>
       </property>
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>475</height>
+        <height>600</height>
        </size>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -456,6 +456,30 @@
          </property>
          <property name="text">
           <string>(system times)</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_4">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="labelFiltering">
+         <property name="text">
+          <string>Filtering (0 off):</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QSpinBox" name="spinBoxFiltering">
+         <property name="suffix">
+          <string>%</string>
+         </property>
+         <property name="maximum">
+          <number>100</number>
          </property>
         </widget>
        </item>
